--- a/poster_landscape.tex
+++ b/poster_landscape.tex
@@ -24,7 +24,7 @@
 
 \usepackage{colortbl}
 \usepackage{xcolor}
-\graphicspath{{images/}{imgs/}}
+\graphicspath{{images/}}
 
 \bibliographystyle{abbrv}
 \setlength{\bibsep}{0.1pt}
@@ -95,11 +95,11 @@
  % University logo
  {
     \begin{minipage}[c]{0.06\textwidth}
-    \includegraphics[width=\linewidth]{tables/qrcode.png}
+    \includegraphics[width=\linewidth]{qrcode.png}
     \end{minipage}
     \makebox[0.02\textwidth]{} 
     \begin{minipage}[c]{0.15\textwidth}
-    \includegraphics[width=\linewidth]{tables/icml_logo.png}
+    \includegraphics[width=\linewidth]{icml_logo.png}
     \end{minipage}
     \makebox[0.02\textwidth]{} 
     \begin{minipage}[c]{0.09\textwidth}
@@ -174,7 +174,7 @@
     \end{itemize}
     \begin{center}
         \resizebox{0.55\textwidth}{!}{
-            \includegraphics[width=\linewidth]{tables/clf_weight_density_from_training.png}
+            \includegraphics[width=\linewidth]{clf_weight_density_from_training.png}
         }
     \end{center}
     \end{minipage}%
@@ -217,7 +217,7 @@
         \begin{minipage}[b]{0.5\linewidth}
             \begin{center}
             \resizebox{\textwidth}{!}{
-                \includegraphics[width=1.1\linewidth]{tables/no_bottleneck_pooling_density_histogram.png}
+                \includegraphics[width=1.1\linewidth]{no_bottleneck_pooling_density_histogram.png}
             }
             No Bottleneck.
             \end{center}
@@ -226,7 +226,7 @@
         \begin{minipage}[b]{0.5\linewidth}
             \begin{center}
             \resizebox{\textwidth}{!}{
-                \includegraphics[width=1.1\linewidth]{tables/bottleneck_pooling_density_histogram.png}
+                \includegraphics[width=1.1\linewidth]{bottleneck_pooling_density_histogram.png}
             }
             With Bottleneck.
             \end{center}
